Updated cookie expiration time along with Car, Ad, Engine and Manufacturer configurations.
Added Ad controller along with Core project.

--- a/Xcelerate/Views/Shared/_Layout.cshtml
+++ b/Xcelerate/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
 					<li><a asp-area="" asp-controller="Home" asp-action="HomePage">Home</a></li>
 					<li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
 					<li><a asp-area="" asp-controller="Ad" asp-action="Index">Ads</a></li>
-					<li><a asp-area="" asp-controller="Ad" asp-action="Index">Create</a></li>
+					<li><a asp-area="" asp-controller="Ad" asp-action="Create">Create</a></li>
 				</ul>
 			}
 			@if (!User?.Identity?.IsAuthenticated ?? false)
