--- a/Xcelerate/wwwroot/css/Ad/Information.css
+++ b/Xcelerate/wwwroot/css/Ad/Information.css
@@ -171,7 +171,7 @@ body {
 .list-information-car-accessories {
     display: none;
     opacity: 1;
-    transition: opacity 0.5s ease, display 0.5s ease;
+    transition: opacity 0.5s ease;
     flex-direction: column;
     align-items: center;
 }
