--- a/Xcelerate/wwwroot/css/Layout/Layout.css
+++ b/Xcelerate/wwwroot/css/Layout/Layout.css
@@ -1,4 +1,29 @@
-﻿button {
+﻿/* Width and height for the scrollbar track */
+::-webkit-scrollbar {
+    width: 12px;
+    border-radius: 6px;
+    background-color: lightslategray;
+}
+
+/* Styles for the scrollbar handle */
+::-webkit-scrollbar-thumb {
+    background-color: lightgray;
+    backdrop-filter: blur(7px);
+    border-radius: 6px;
+    transition: background-color 0.2s ease-in-out;
+}
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background-color: darkgray;
+}
+
+/* Styles for the scrollbar track (background) */
+::-webkit-scrollbar-track {
+    backdrop-filter: blur(7px);
+}
+
+
+button {
     border-radius: 24px;
     padding: 10px;
     width: 150px;
