Updated: - AdPreviewViewModel.cs - AdController.cs - Create.cshtml - Index.cshtml - Information.cshtml - Information.css - Ad.js
Added function to look through images of vehicles in Information.cshtml

--- a/Xcelerate/Views/Ad/Create.cshtml
+++ b/Xcelerate/Views/Ad/Create.cshtml
@@ -170,7 +170,7 @@
 				<span asp-validation-for="@Model.BodyType" class="text-danger"></span>
 			</div>
 
-			@* <div class="row-accessories">
+			 <div class="row-accessories">
 				<h1 class="title-text-accessory">ACCESSORIES</h1>
 				<section class="checkbox-list">
 					@for (var i = 0; i < Model.Accessories.Count; i++)
@@ -186,7 +186,7 @@
 						</div>
 					}
 				</section>
-			</div> *@
+			</div> 
 
 
 
