--- a/Xcelerate/Views/Ad/Information.cshtml
+++ b/Xcelerate/Views/Ad/Information.cshtml
@@ -7,14 +7,12 @@
 	<article class="hostel-home-card">
 		<div class="image-holder">
 			@{
-				// Display the first image
-				var firstImage = Model.ImageUrls.FirstOrDefault();
-				if (firstImage != null)
-				{
-					<img src="~/Images/Ad/@firstImage" alt="First image of the car ad" />
-				}
+				int currentIndex = 0;
 			}
+			<img src="~/Images/Ad/@Model.ImageUrls[currentIndex]" alt="First image of the car ad" id="carImage" class="image-transition" fade />
 		</div>
+		<a class="prev" onclick="changeImage(-1)">&#10094;</a>
+		<a class="next" onclick="changeImage(1)">&#10095;</a>
 		<h2 class="article-title">@Model.Brand @Model.Model</h2>
 		<div class="card-text">
 			<ul class="list-information-car">
@@ -75,5 +73,24 @@
 
 @section Scripts {
 	<partial name="_ValidationScriptsPartial" />
+	<script src="~/js/Ad/Ad.js" asp-append-version="true"></script>
+	<script>
+		var currentIndex = 0;
+		var imageUrls = @Html.Raw(Json.Serialize(Model.ImageUrls));
+
+		function changeImage(step) {
+			currentIndex += step;
+
+			if (currentIndex < 0) {
+				currentIndex = imageUrls.length - 1;
+			} else if (currentIndex >= imageUrls.length) {
+				currentIndex = 0;
+			}
+
+			var imageUrl = '@Url.Content("~/Images/Ad/")' + imageUrls[currentIndex];
+			$("#carImage").fadeTo(200, 0, function () {
+				$(this).attr("src", imageUrl).fadeTo(200, 1);
+			});
+		}
+	</script>
 }
-<script src="~/js/Ad/Ad.js" asp-append-version="true"></script>
