--- a/Xcelerate/Views/Shared/_Layout.cshtml
+++ b/Xcelerate/Views/Shared/_Layout.cshtml
@@ -17,6 +17,7 @@
 						 alt="Icon Description" />
 					<li><a asp-area="" asp-controller="Home" asp-action="HomePage">Home</a></li>
 					<li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
+					<li><a asp-area="" asp-controller="Ad" asp-action="Index">Ads</a></li>
 				</ul>
 			}
 			else
