--- a/Xcelerate/wwwroot/css/Ad/Create.css
+++ b/Xcelerate/wwwroot/css/Ad/Create.css
@@ -17,7 +17,7 @@ span {
     position: relative;
     font-family: "Avenir Next", sans-serif;
     font-weight: 900;
-    font-size: 64px;
+    font-size: 16px;
     text-transform: uppercase;
     font-style: italic;
     letter-spacing: 0.05em;
@@ -131,10 +131,10 @@ input {
     height: 30px;
 }
 
-button {
+.submit-button {
     position: absolute;
     left: 40%;
-    bottom: 80px;
+    bottom: 20px;
     border-radius: 24px;
     padding: 10px;
     width: 150px;
@@ -253,13 +253,13 @@ button {
 
 .card-ad-create {
     opacity: 1;
-    margin: 102px 115px 0px 15%;
+    margin: 45px 115px 0px 15%;
     border-radius: 24px;
     /* background-image: url(2021_honda_civic_type_r_9_1920x1080.png); */
     background-repeat: no-repeat;
     background-size: cover;
     width: 1450px;
-    height: 715px;
+    height: 775px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(7px);
     transition: opacity 0.5s; /* Add a transition effect */
