--- a/Xcelerate/wwwroot/css/Layout/Layout.css
+++ b/Xcelerate/wwwroot/css/Layout/Layout.css
@@ -12,10 +12,10 @@
     border-radius: 6px;
     transition: background-color 0.2s ease-in-out;
 }
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-    background-color: darkgray;
-}
+    /* Handle on hover */
+    ::-webkit-scrollbar-thumb:hover {
+        background-color: darkgray;
+    }
 
 /* Styles for the scrollbar track (background) */
 ::-webkit-scrollbar-track {
@@ -189,7 +189,7 @@ button {
 }
 
     #authorize-list-authorized:hover {
-        width: 175px;
+        width: 275px;
     }
 
         #authorize-list-authorized:hover .register-button-submit,
@@ -314,30 +314,31 @@ button {
     padding: 15px;
     border-radius: 50px;
     width: 40px;
+    height: 40px;
     margin-top: 5px;
     margin-left: 6px;
     transition: 0s ease-in-out;
     display: inline-flex;
 }
 
-#ul-list-authorized li {
-    margin-top: 10px;
-    margin-right: 15px;
-    margin-left: 25px;
-    font-size: 16px;
-    text-shadow: 2px 1px 2px rgba(0, 0, 0, 0.5);
-}
+    #ul-list-authorized li {
+        margin-top: 10px;
+        margin-right: 15px;
+        margin-left: 25px;
+        font-size: 16px;
+        text-shadow: 2px 1px 2px rgba(0, 0, 0, 0.5);
+    }
 
-#ul-list-authorized li a:hover {
-    color: #ffcc00; /* Change the color on hover as needed */
-}
+        #ul-list-authorized li a:hover {
+            color: #ffcc00; /* Change the color on hover as needed */
+        }
 
 #ul-list-authorized {
     transition: width 0.3s ease-in-out; /* Adjust the duration and timing function as needed */
 }
 
     #ul-list-authorized:hover {
-        width: 450px;
+        width: 480px;
     }
 
         #ul-list-authorized:hover a {
