--- a/Xcelerate/Views/Ad/UserAds.cshtml
+++ b/Xcelerate/Views/Ad/UserAds.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<AdPreviewViewModel>
+﻿@model List<UserAdsViewModel>
 
 <link rel="stylesheet" href="~/css/Ad/UserAds.css" asp-append-version="true" />
 
