--- a/Xcelerate/Views/Ad/Information.cshtml
+++ b/Xcelerate/Views/Ad/Information.cshtml
@@ -5,12 +5,12 @@
 <section class="card-holder" asp-action="Information">
 
 	<article class="hostel-home-card">
-		 <div class="image-holder">
+		<div class="image-holder">
 			@{
 				int currentIndex = 0;
 			}
 			<img src="~/Images/Ad/@Model.ImageUrls[currentIndex]" alt="First image of the car ad" id="carImage" class="image-transition" fade />
-		</div> 
+		</div>
 		<a class="prev" onclick="changeImage(-1)">&#10094;</a>
 		<a class="next" onclick="changeImage(1)">&#10095;</a>
 		<h2 class="article-title">@Model.Brand @Model.Model</h2>
@@ -21,6 +21,7 @@
 				<div class="car-information">
 				<li><strong>Year:</strong> @Model.Year</li>
 				<li><strong>Engine:</strong> @Model.Engine</li>
+				<li><strong>HorsePower:</strong> @Model.HorsePower</li>
 				<li><strong>Condition:</strong> @Model.Condition</li>
 				<li><strong>Euro Standard:</strong> @Model.EuroStandard</li>
 				<li><strong>Fuel Type:</strong> @Model.FuelType</li>
@@ -34,6 +35,8 @@
 				<li><strong>Country:</strong> @Model.Address.CountryName</li>
 				<li><strong>Town:</strong> @Model.Address.TownName</li>
 				<li><strong>Street:</strong> @Model.Address.StreetName</li>
+				<li><strong>Owner:</strong> @Model.FirstName @Model.LastName</li>
+				<li><strong>Created On:</strong> @Model.CreatedOn</li>
 				<!-- Include necessary properties from Address, Ad, and User entities -->
 		</div>
 		</ul>
