--- a/Xcelerate/Views/Ad/Information.cshtml
+++ b/Xcelerate/Views/Ad/Information.cshtml
@@ -17,7 +17,9 @@
 		<div class="card-text">
 			<ul class="list-information-car">
 				<strong class="price-information">Price: @Model.Price$</strong>
-				<button class="buy-button">BUY</button>
+				<form asp-area="" asp-controller="Ad" asp-action="Buy" asp-route-carId="@Model.CarId" method="post">
+					<button type="submit" class="buy-button">BUY</button>
+				</form>
 				<div class="car-information">
 				<li><strong>Year:</strong> @Model.Year</li>
 				<li><strong>Engine:</strong> @Model.Engine</li>
