--- a/Xcelerate/Views/Shared/_Layout.cshtml
+++ b/Xcelerate/Views/Shared/_Layout.cshtml
@@ -49,8 +49,9 @@
 					<img id="keyIcon"
 						 src="~/Icons/icons8-key-100.png"
 						 alt="Icon Description" />
-					<li class="logout-state"><a asp-area="" asp-controller="Account" asp-action="Profile" class="logout-button-submit">ACCOUNT</a></li>
 					<li class="logout-state"><a asp-area="" asp-controller="Account" asp-action="Logout" class="logout-button-submit">LOG OUT</a></li>
+					<li class="logout-state"><a asp-area="" asp-controller="UserCars" asp-action="Index" class="logout-button-submit">MY CARS</a></li>
+					<li class="logout-state"><a asp-area="" asp-controller="Account" asp-action="Profile" class="logout-button-submit">ACCOUNT</a></li>
 				</ul>
 			}
 		</nav>
