--- a/Xcelerate/Views/_ViewImports.cshtml
+++ b/Xcelerate/Views/_ViewImports.cshtml
@@ -5,3 +5,4 @@
 @using Xcelerate.Core.Models.Account;
 @using Xcelerate.Core.Models.Ad;
 @using Xcelerate.Core.Models.Account.UserProfile;
+@using Xcelerate.Core.Models.UserCars;
